--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <title>Help Page</title>
-  <p> <a href="/about"> about <a></p> <p> <a href="/"> Home <a> </p>
-
+  <p> <a href="/about"> about <a></p>
+  <p> <a href="/"> Home <a> </p>
+  <p><a href="/projects"> Projects<a></p>
 </head>
